# systemd

./: .gitignore  meson.build  meson_options.txt
.pc/: applied-patches
.pc/uniontech-implement-USEC-with-libusec.patch/: meson_options.txt
debian/: NEWS  README.Debian  README.source  changelog  clean  control  gbp.conf  libnss-myhostname.postinst  not-installed  rules  salsa-ci.yml  shlibs.local.in  systemd-boot-efi-amd64-signed-template.lintian-overrides  systemd-boot-efi-arm64-signed-template.lintian-overrides  systemd-boot-tools.install  systemd-boot-tools.manpages  systemd-boot.install  systemd-boot.manpages  systemd-boot.postinst  systemd-boot.prerm  systemd-boot.triggers  systemd-container.install  systemd-container.manpages  systemd-cryptsetup.install  systemd-cryptsetup.lintian-overrides  systemd-cryptsetup.manpages  systemd-repart.install  systemd-repart.manpages  systemd-resolved.NEWS  systemd-resolved.install  systemd-resolved.manpages  systemd-standalone-shutdown.install  systemd-standalone-shutdown.lintian-overrides  systemd-standalone-shutdown.manpages  systemd-sysv.install  systemd-sysv.manpages  systemd-tests.install  systemd-tests.lintian-overrides  systemd-timesyncd.install  systemd-timesyncd.manpages  (+14 more)
debian/extra/: checkout-upstream  gen-signing-template
debian/patches/: 0001-basic-add-pidfs-magic-31709.patch  0001-deepin-sw_64-support.diff  0002-basic-add-bcachefs-magic.patch  01e6465b-nsresourced-verify-user-namespace-identity-on-registry.patch  1d102a66-meson-add-libucontext-to-libshared-deps.patch  24319a9c-efi-api-fix-unaligned-access-in-efi-guid-to-id128.patch  2eff8375-dissect-image-cast-to-uint64-t-before-512-for-sig-lookup.patch  2f2203c2-update-todo.patch  301b4193-bootctl-remove-fallback-efi-boot-variable-on-uninstall.patch  37679d79-qmp-client-add-fiber-aware-call-paths.patch  3d0a05dc-core-exec-invoke-fix-bogus-error-code.patch  3ecd6b69-user-util-stop-mangling-groupname-in-get-group-creds.patch  3f0aa585-libsystemd-network-propagate-sd-event-default-failure.patch  3fb520f0-pkcs11-switch-to-rsa-oaep-sha-256-sha-1.patch  (+122 more)
man/: run0.xml  storagectl.xml  systemd-run.xml  systemd-storage-block@.service.xml  systemd-storage-fs@.service.xml  systemd.network.xml
src/storage/: meson.build  storage-block.c  storage-compat.h  storage-fs.c  storage-util.c  storage-util.h  storagectl.c
sysusers.d/: basic.conf.in
units/: meson.build  systemd-storage-block.socket  systemd-storage-block@.service.in  systemd-storage-fs@.service.in
units/user/: meson.build  systemd-storage-fs.socket  systemd-storage-fs@.service.in
(+72 files in other folders)
